# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  build.sh
app/: index.html  ttt.js  ttt.wasm
app/resources/shaders/glsl330/: confetti.fs  raymarching.fs
src/: hot_reload.c  hot_reload.h  main.c  main.cc  ttt.c  ttt.cc  ttt.h  ttt_base.h
